# superGod

./: .gitignore  README.md  pom.xml
dioxus-web/: Cargo.toml  Dioxus.toml  README.md
dioxus-web/src/: main.rs
rust_ui/: Cargo.toml  Trunk.toml  index.html
rust_ui/public/css/: login.css
rust_ui/public/css/huoying/: huoying.css
rust_ui/public/js/: include.js
rust_ui/src/: app.rs  example.rs  func.rs  main.rs  view.rs
rust_ui/src-tauri/: Cargo.toml  tauri.conf.json
rust_ui/src-tauri/icons/: icon.icns
rust_ui/src-tauri/src/: main.rs
settings/: pom.xml
settings/sql/: README.md
settings/sql/dailyAttendance/2023-04-01/: daily_attendance_init-01.sql
settings/sql/user/: userinit.sql
settings/super-database/: pom.xml
super-daily-attendance/: pom.xml
super-daily-attendance/daily-attendance/: pom.xml
super-daily-attendance/interface-api/: pom.xml
super-ui/: README.md  package.json
system/: pom.xml
system/super-common/: pom.xml
system/super-rpc/: pom.xml
system/super-system/: pom.xml
system/super-system/super-user/: pom.xml
system/super-system/super-user/user/: pom.xml
system/super-system/super-user/user-api/: pom.xml
system/super-user/: pom.xml
system/super-user/user/: HELP.md  pom.xml
system/super-user/user-api/: pom.xml
system/super_auth/: pom.xml
tauri_ui/: Cargo.toml  README.md  index.html
tauri_ui/src/: func.rs  main.rs  view.rs
tauri_ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri_ui/src-tauri/src/: main.rs
tauri_ui/src/func/: app.rs  mod.rs  native.rs
tauri_ui/src/view/: app_view.rs  login_v.rs  mod.rs
(+139 files in other folders)
